--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,22 +1,27 @@
-\begin{tabular}{lccc} \toprule
- & (1) & (2) & (3) \\ \midrule 
-Male & 6,035.167*** & 6,076.817*** & 3,386.390** \\
+\begin{tabular}{lccc} \hline
+ & (1) & (2) & (3) \\
+ & cnlsyZ & cnlsyZX & cnlsyZL \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  \\
+male & 6,035.167*** & 6,076.817*** & 3,386.390** \\
  & (1,187.329) & (1,090.286) & (1,528.888) \\
-Black & -9,285.510*** & -4,534.764*** & -2,634.691* \\
+black & -9,285.510*** & -4,534.764*** & -2,634.691* \\
  & (1,179.675) & (1,092.219) & (1,499.386) \\
- Mother's Education & 2,396.355*** & 262.807 & -164.905 \\
+m\_ed0y & 2,396.355*** & 262.807 & -164.905 \\
  & (333.230) & (324.874) & (466.447) \\
-PIAT (5-7) &  & 148.468*** & 193.189** \\
+piatmath &  & 148.468*** & 193.189** \\
  &  & (54.301) & (81.647) \\
-Education (30) &  & 3,928.574*** & 2,415.347*** \\
+years\_30y &  & 3,928.574*** & 2,415.347*** \\
  &  & (276.850) & (533.030) \\
-Labor Income (21) &  & 0.579*** &  \\
+si21y\_inc\_labor &  & 0.579*** &  \\
  &  & (0.058) &  \\
-BMI (34)&  & -21.917 & -204.699* \\
+si34y\_bmi &  & -21.917 & -204.699* \\
  &  & (78.862) & (110.928) \\
-Labor Income (21) &  &  & 0.464*** \\
+inc\_labor28 &  &  & 0.464*** \\
  &  &  & (0.085) \\
-Constant & 1,694.816 & -48,148.884*** & -27,860.399*** \\ \\ \midrule 
+Constant & 1,694.816 & -48,148.884*** & -27,860.399*** \\
+ & (3,896.674) & (5,998.816) & (8,861.814) \\
+ &  &  &  \\
 Observations & 1,424 & 1,424 & 628 \\
-$R^2$ & 0.102 & 0.309 & 0.468 \\ \bottomrule
+ R-squared & 0.102 & 0.309 & 0.468 \\ \hline
 \end{tabular}
