--- a/AppResOutput/1_abccare.tex
+++ b/AppResOutput/1_abccare.tex
@@ -6,21 +6,54 @@
 
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts}
 	\input{AppResOutput/abccare_jul7/rslt_pooled_counts}
+	\begin{tablenotes}
+	\footnotesize
+	 Note: The statistics presented in the first row of this table count the number of socially positive 
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	significantly different from 50\% at the 10\% level. The statistics in the second row count the
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Male Sample} 
      \label{table:abccare_rslt_male_counts}
 	\input{AppResOutput/abccare_jul7/rslt_male_counts}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in the first row of this table count the number of socially positive
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are
+	significantly different from 50\% at the 10\% level. The statistics in the second row count the
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Female Sample} 
      \label{table:abccare_rslt_female_counts}
 	\input{AppResOutput/abccare_jul7/rslt_female_counts}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in the first row of this table count the number of socially positive 
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	significantly different from 50\% at the 10\% level. The statistics in the second row count th
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 \clearpage
 
@@ -29,39 +62,87 @@
 \noindent The tables in this section contain an extra column. This column contains the number of variables for the outcome category used to construct the combining function statistic. \\
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts_n50a100}
 	\input{AppResOutput/abccare_jul7/rslt_pooled_counts_n50a100}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}   
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts_n10a10}
 	\input{AppResOutput/abccare_jul7/rslt_pooled_counts_n10a10}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}   
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Male Sample} 
      \label{table:abccare_rslt_male_counts_n50a100}
 	\input{AppResOutput/abccare_jul7/rslt_male_counts_n50a100}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}	
+	\end{threeparttable}
 	\end{table}   
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Male Sample} 
      \label{table:abccare_rslt_male_counts_n10a10}
 	\input{AppResOutput/abccare_jul7/rslt_male_counts_n10a10}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}   
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Female Sample} 
      \label{table:abccare_rslt_female_counts_n50a100}
 	\input{AppResOutput/abccare_jul7/rslt_female_counts_n50a100}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}	
+	\end{threeparttable}
 	\end{table}   
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Female Sample} 
      \label{table:abccare_rslt_female_counts_n10a10}
 	\input{AppResOutput/abccare_jul7/rslt_female_counts_n10a10}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}   
 \clearpage
 
