--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -48,6 +48,7 @@ chosen among a set of variables, as detailed in Appendix~\ref{appendix:bvariable
 \subsection{Auxiliary Datasets and Variables Used to Predict}
 
 \subsubsection{Auxiliary Datasets}
+\label{app:method_aux}
 
 \noindent We rely on the following datasets to estimate life-cycle profiles. We use this data in a very similar way to estimate the three life-cycle profiles of interest. For subject's labor income and parental labor income we use the exact same data. Two differences are: (i) for parental income, we need to produce a life-cycle profile from where the child is zero years old to when her mother is 65 (age at which we assume she retires); (ii) for parental income, we observe more years, and therefore need to produce predictions for less time points.
 
