--- a/Appendices/MoreOutcomes.tex
+++ b/Appendices/MoreOutcomes.tex
@@ -8,61 +8,146 @@
 
 \noindent To illustrate the difference between the outcomes in this appendix and the outcomes in Section~\ref{section:c-functions}, consider two outcomes related to employment. In Section~\ref{section:c-functions}, we include employment at age 30. In this appendix, we include both employment at age 30 and job satisfaction at age 30. Job satisfaction is a subjective variable, and it is not as clear what the effect of treatment on outcome is.\\
 
-\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:c-functions}, but this is expected given how we construct the lists of outcomes. Appendix~\ref{appendix:morebycat} present the results by categories. We present the detailed point estimates in an additional appendix, for brevity.
+\noindent Table~\ref{table:abccare_rslt_pooled_counts_all} presents the results for the pooled sample, and Table~\ref{table:abccare_rslt_male_counts_all} and \ref{table:abccare_rslt_female_counts_all} present the results for males and females.
+The statistics presented in the first row of these tables count the number of socially positive treatment effects as a percentage of all treatment effects. The statistics are bolded if they are significantly different from 50\% at the 10\% level. The statistics in the second row count the	number of socially positive treatment effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 10\% at the 10\% level. It is still the case both that (i) we find a majority of positive treatment effects; and (ii) more than 10\% of these positive treatment effects are significant at the 10\%. It is true that the results weaken if compared to those we consider in Section~\ref{section:c-functions}, but this is expected given how we construct the lists of outcomes.
+
+ Appendix~\ref{appendix:morebycat} present the results by categories. The tables that mention \textbf{10\% significance} in their labels present statistics that count the number of socially positive treatment effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 10\% at the 10\% level. The tables that do not mention \textbf{10\% significance} in their labels present statistics that count the number of socially positive treatment effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly different than 50\% at the 10\% level.
+
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_all}
+	\begin{tablenotes}
+	\footnotesize
+	 Note: The statistics presented in the first row of this table count the number of socially positive 
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	significantly different from 50\% at the 10\% level. The statistics in the second row count the
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Male Sample} 
      \label{table:abccare_rslt_male_counts_all}
 	\input{AppResOutput/abccare/rslt_male_counts_all}
+	\begin{tablenotes}
+	\footnotesize
+	 Note: The statistics presented in the first row of this table count the number of socially positive 
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	significantly different from 50\% at the 10\% level. The statistics in the second row count the
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 
 	\begin{table}[H]
+	\begin{threeparttable}
      \caption{Combining Functions, Female Sample} 
      \label{table:abccare_rslt_female_counts_all}
 	\input{AppResOutput/abccare/rslt_female_counts_all}
+	\begin{tablenotes}
+	\footnotesize
+	 Note: The statistics presented in the first row of this table count the number of socially positive 
+	treatment effects as a percentage of all treatment effects. The statistics are bolded if they are 
+	significantly different from 50\% at the 10\% level. The statistics in the second row count the
+	number of socially positive treatment effects that are significant at the 10\% level as a percentage
+	of all treatment effects. Each statistic is bolded if it is significantly different from 10\% at the 10\% 
+	level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{table}  
 
 \subsection{{Outcomes by Category}} \label{appendix:morebycat}
 
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_n50a100_all}
+		\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Pooled Sample} 
      \label{table:abccare_rslt_pooled_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_pooled_counts_n10a10_all}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Male Sample} 
      \label{table:abccare_rslt_male_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_male_counts_n50a100_all}
+		\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Male Sample} 
      \label{table:abccare_rslt_male_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_male_counts_n10a10_all}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category, Female Sample} 
      \label{table:abccare_rslt_female_counts_n50a100_all}
 	\input{AppResOutput/abccare/rslt_female_counts_n50a100_all}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	 effects as a percentage of all treatment effects. Each statistic is bolded if it is significantly
+	 different from 50\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
 
 	\begin{sidewaystable}[H]
+	\begin{threeparttable}
      \caption{Combining Functions by Category $|$ 10\% Significance, Female Sample} 
      \label{table:abccare_rslt_female_counts_n10a10_all}
 	\input{AppResOutput/abccare/rslt_female_counts_n10a10_all}
+	\begin{tablenotes}
+	\footnotesize
+	\item Note: The statistics presented in this table count the number of socially positive treatment 
+	effects that are significant at the 10\% level as a percentage of all treatment effects. Each statistic
+	is bolded if it is significantly different from 10\% at the 10\% level.
+	\end{tablenotes}
+	\end{threeparttable}
 	\end{sidewaystable}   
