--- a/Appendices/Sensitivity.tex
+++ b/Appendices/Sensitivity.tex
@@ -16,10 +16,10 @@ sample selections from all of our data sources and other parameters. We analyze 
 
 \noindent Figure \ref{fig:bcr_discount} displays how the benefit/cost ratio changes as we adjust
 the rate at which we discount the cash flows. We find that for males, the benefits of 
-the programs exceed the costs for discount rates as high as 12\%. We also
+the programs exceed the costs for discount rates as high as 15\%. We also
 find that the benefit/cost ratios for discount rates of 2--12\% remain within the 
 80\% confidence interval of our actual point estimate. The case is different for females,
-for whom the ratio falls below 1 at a discount rate of 6\%. The benefit/cost ratio for 
+for whom the ratio falls below 1 at a discount rate closer to 10\%. The benefit/cost ratio for 
 females remain within the 80\% confidence interval of our estimate for discount rates
 of 2--15\%. Although the alternate estimates generally remain within the 80\%
 confidence intervals for both males and females, the slope of the curves in Figure
@@ -103,10 +103,9 @@ represents a \$0.25 increment in the cost of welfare per dollar of tax revenue).
 \end{figure}
 
 \noindent Figure \ref{fig:bcr_dwl} illustrates how the benefit/cost ratio changes as we vary
-the marginal cost of welfare. For females we see that the costs continue to exceed the benefits (both are discounted at a rate of 4\%) even when the marginal cost of welfare is
-assumed to equal \$1 for every dollar of tax revenue. For males, the benefits
-exceed the costs even as we increase the deadweight loss to \$3 for every dollar of tax
-revenue. The resilience of the benefit/cost ratio of males is attributed to the 
+the marginal cost of welfare. For females we see that the benefits exceed the costs (both are discounted at a rate of 4\%) even when the marginal cost of welfare is
+assumed to equal \$3 for every dollar of tax revenue.We see a similar relationship hold for men, however, the ratio is significantly higher at every marginal cost.  
+The relative strength of the benefit/cost ratio of males is attributed to the 
 large impacts ABC/CARE had on criminal activity, which bears a large cost to society. As we
 increase the marginal cost of welfare, we are in fact increasing the stream of benefits
 associated with the reduction in criminal costs of males. At the same time, however,
@@ -159,8 +158,9 @@ is stable across different levels of public-transfer income, QALYs, health costs
 costs. Parental income has the biggest effect on the IRR, 
 and is one of the only components for which the alternative IRR falls outside of the 80\% confidence 
 interval of the original estimate. This occurs when we double the parental income component in the
-flow of benefits. By tripling the component, we obtain an IRR exceeding 100\%, which we
-do not display in the chart above. This sensitivity is due to both the magnitude of the
+flow of benefits. 
+%By tripling the component, we obtain an IRR exceeding 100\%, which we do not display in the chart above.
+ This sensitivity is due to both the magnitude of the
 treatment effect on parental income, as well as how the treatment effect took place
 earlier in the ABC/CARE subjects' lives. The sensitivity of the IRR to the program costs
 is also a result of the timing of the costs in the subjects lives. As females in the treatment groups attained higher levels of education
@@ -258,12 +258,13 @@ of each component of the benefits and costs. Our findings for males are similar 
 those for females: the IRR is insensitive to changes in public-transfer income, QALYs, and health costs. 
 As the parental income and the program cost components for the female subsample is 
 the same as those of the male subsample, we also observe that the IRR for males 
-is sensitive to changes in both of these components. The IRR for males is similarly sensitive to increasing the weight of the cost of control substitution. Compared to females, however, as the weight increases, the internal rate of return increases at a much faster rate. This is a product of the different populations of males and females who were enrolled in alternative preschools.
+is sensitive to changes in both of these components. The IRR for males is not sensitive to increasing the weight of the cost of control substitution and responds to increases in costs at a smaller rate than females. 
+%Compared to females, however, as the weight increases, the internal rate of return increases at a much faster rate.
+This is a product of the different populations of males and females who were enrolled in alternative preschools.
 The IRR for the male subsample is a little less sensitive to changes in labor income
-and education costs than for the female subsample, but we still observe in Figure \ref{fig:irrf_factor_m}
-that the IRR for males rises as we multiply the benefits stemming from those components 
-by increasingly large factors. 
-Finally, the IRR steadily 
+than for the female subsample, but we still observe in Figure \ref{fig:irrf_factor_m}
+that the IRR for males rises as we multiply the benefits stemming from this component by increasingly large factors. 
+Finally, the IRR 
 increases for males as we increase the magnitude of the criminal cost component. 
 This is not surprising because the reduction in the costs of crimes is the largest 
 benefit of ABC/CARE for males. 
@@ -353,10 +354,10 @@ benefit of ABC/CARE for males.
 \noindent Figure \ref{fig:bcrf_factor_f} shows how the benefit/cost ratio changes for females as
 we multiply each component of the benefits and costs by a factor between 0 and 3. We 
 observe that the ratio is generally insensitive to changes in all the components, 
-except parental income, labor income, education costs, and program costs. The sensitivity
+except parental income, labor income, education costs, crime costs, and program costs. The sensitivity
 to program costs is due to the fact that it is the denominator of the 
-benefit/cost ratio. In the case of the other three components, when discounted, 
-they exhibit the three largest present values. The sensitivity of the benefit/cost
+benefit/cost ratio. In the case of the other components, when discounted, 
+they exhibit the largest present values. The sensitivity of the benefit/cost
 ratio to changes in these components therefore indicates the magnitude of those 
 components relative to the rest, with parental income having the largest magnitude
 in terms of discounted treatment effect, followed by labor income, and then
