--- a/Appendices/Health/method_analysis.tex
+++ b/Appendices/Health/method_analysis.tex
@@ -56,7 +56,7 @@ Both ADLs and IADLs are components of FAM's model for quality-adjusted life year
 The ABC/CARE age-30 subject interview does not ask about ADLs or IADLs, but it does ask if the subject has a physical or nervous condition that keeps them from working.
 PSID respondents are also asked this question.
 We create an imputation model for each of these two measures using an ordered Probit model estimated on PSID respondents aged 25 to 35.
-We use these models to compute the probabilities for each number of ADLs and IADLs. At the start of the the simulation, we generate Monte Carlo random draws according to these probabilities and use them to assign the corresponding counts. \\
+We use these models to compute the probabilities for each number of ADLs and IADLs. At the start of the simulation, we generate Monte Carlo random draws according to these probabilities and use them to assign the corresponding counts. \\
 
 \noindent When a subject claims DI benefits, it affects their FAM transitions in employment status, insurance category, and Medicare enrollment.
 DI claiming also affects medical costs.
@@ -122,7 +122,7 @@ The scoring system for EQ-5D was first developed using a U.K. sample.\footnote{\
 a U.S. sample was generated.\footnote{\citet{Shaw_etal_2005_EQ5D_MC}.} The PSID does not ask the appropriate questions for computing EQ-5D, but the MEPS does. \\
 
 % review this:
-\noindent We map EQ-5D scores from the MEPS onto the PSID data using common measures between the MEPS and PSID.\footnote{The main variables in this mapping are self-reported health and requiring help with ADLs.} We then predict the EQ-5D scores for all PSID members running a linear regression using the variables that are transitioned in FAM (including ADL counts, IADL counts, and diseases). The microsimulation uses this linear regression to compute QALYs. \\
+\noindent We predict EQ-5D scores from the MEPS onto the PSID data using common measures between the MEPS and PSID.\footnote{The main variables in this prediction are self-reported health and requiring help with ADLs.} We then predict the EQ-5D scores for all PSID members running a linear regression using the variables that are transitioned in FAM (including ADL counts, IADL counts, and diseases). The microsimulation uses this linear regression to compute QALYs. \\
 %
 %We use a crosswalk from MEPS to compute EQ-5D scores for PSID respondents.\footnote{Section \ref{sec:model_development_qalys_eq5d}
 %describes EQ-5D in MEPS. Details of the crosswalk model development are given
@@ -339,7 +339,7 @@ The simulated financial outcomes are in 2014 USD. \\
 \noindent To match the biennial structure of the PSID data used to estimate the transition models, the simulation proceeds in two-year increments.\footnote{The end of each two-year step is designed to occur on July 1st to allow for easier matching with population forecasts from Social Security Administration (SSA).}
 Once the new states have been determined, the cross-sectional models for medical costs and QALYs are applied.
 Computation of medical costs includes the people who died to account for end-of-life costs.
-The simulation ends when all simulated ABC/CARE subjects are deceased. Mortality is forced at age 120 if the simulated mortality model has not already predicted a subject's death. \\
+The simulation ends when all simulated ABC/CARE subjects are deceased. Mortality is forced at age 79 if the simulated mortality model has not already predicted a subject's death. Age 79 was selected as the age at which mortality is forced because a majority of simulations resulted in QALY and age of mortality estimates that were below this age. The difference in the net present value between treatment and control groups past this age is negligible.\\
 
 \noindent Among the ABC/CARE subjects simulated in FAM, the years of completion of the age-30 interview range from 2003 to 2009.
 FAM's two-year time step only allows the simulation of even or odd years.
@@ -408,7 +408,7 @@ GDP assumptions for 2020-2100 are based on the 2008 OASDI Trustee's Report long-
 
 \noindent Medical costs for ages 8 to 11 were estimated in three stages using age 12 interview data. First, we impute whether or not a subject spent a week in the hospital for those subjects who are missing this information in their age 12 interview.  The imputation model predicts utilization based on race and whether or not the subject was ever diagnosed with asthma between ages 8--11.  Next we separate the ABC/CARE subjects into the group that spent a week in the hospital in this age range and the group that did not.  For the group that did not spend any time in the hospital, we predicted medical costs as a two stage model.  The first stage predicts whether there were any medical costs at all.  Then, the second stage predicts the amount of medical costs for those subjects who were predicted to have some costs.  We assume the group that spent time in the hospital had some medical costs, so we skip the first stage and go directly to predicting the amount.  The cost models use race, asthma diagnosis, whether or not the father was absent from the home, family use of food stamps, and number of siblings as predictors.\\
 
-\noindent Medical costs for ages 12 to 14 follow a strategy similar to the age 8--11 costs. First, we impute whether or not a subject had any hospitalization for those subjects who do not report this in their age 15 interview.  Imputations are based on race and presence or a	bsence of an asthma diagnosis between ages 12--14.  Again, we separated the ABC/CARE subjects into a group that had a hospitalization between age 8--11 and a group that did not.  A two-stage model was used to predict medical costs for those with no hospitalization.  Medical costs for the group that had a hospitalization were estimated directly from a single-stage model.  These cost models use race, asthma diagnosis, whether the mother, father, or both parents were absent from the home, family use of food stamps, and number of siblings.\\
+\noindent Medical costs for ages 12 to 14 follow a strategy similar to the age 8--11 costs. First, we impute whether or not a subject had any hospitalization for those subjects who do not report this in their age 15 interview.  Imputations are based on race and presence or absence of an asthma diagnosis between ages 12--14.  Again, we separated the ABC/CARE subjects into a group that had a hospitalization between age 8--11 and a group that did not.  A two-stage model was used to predict medical costs for those with no hospitalization.  Medical costs for the group that had a hospitalization were estimated directly from a single-stage model.  These cost models use race, asthma diagnosis, whether the mother, father, or both parents were absent from the home, family use of food stamps, and number of siblings.\\
 
 \noindent To estimate medical costs for ages 15 to 20, we first impute whether or not the subject spent time in the hospital for those who are missing this information in the age 21 interview.  The imputation model was based on race, asthma diagnosis between ages 15--20, and, for females, the birth of any children.  The age 21 interview asks about the number of days spent in the hospital.  However, it does not record the ages at which these hospital stays occurred.  Considering the difficulty of assigning the hospital days to specific ages in the absence of other information, we decided to use only the indicator of whether or not there were any days spent in the hospital.  Next, we separated subjects into a group that spent some time in the hospital between ages 15--20 and those who did not.  As before, we used the direct model to predict costs for those who had been to the hospital and used a two-stage model for those who had not.  The cost models predict costs based on race, asthma diagnosis, any births (female model only), use of food stamps, whether or not the subject was working age, work status, living at college, and living with parents, and marital status.\\
 
